[gd_scene load_steps=18 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/pictures/sewer/sewer.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Music and Sounds/Hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://intro/script/sequencing.gd" type="Script" id=8]
[ext_resource path="res://Fonts/Kenney Mini.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6, -6 ), Vector2( 5, -6 ), Vector2( -6, 8 ), Vector2( 9, 5 ), Vector2( 0, 0 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="arena" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 121.0
margin_top = 85.0
margin_right = 194.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 9 )
text = "SUBMIT"

[node name="player_panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -24.0
margin_right = 159.0
margin_bottom = -1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="player_data" type="HBoxContainer" parent="player_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Stats" parent="player_panel" instance=ExtResource( 1 )]

[node name="HeartUI" parent="player_panel" instance=ExtResource( 2 )]
margin_left = 216.0
margin_top = 6.0
margin_right = 297.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 5

[node name="Label" type="Label" parent="player_panel"]
margin_left = 95.0
margin_top = 4.0
margin_right = 141.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "player"
align = 1

[node name="action_panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 107.0
margin_right = 161.0
margin_bottom = 154.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="user_input1" type="HBoxContainer" parent="action_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -21.0
custom_constants/separation = 5
alignment = 1

[node name="LineEdit" type="LineEdit" parent="action_panel/user_input1"]
margin_right = 58.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
placeholder_text = "1"

[node name="LineEdit2" type="LineEdit" parent="action_panel/user_input1"]
margin_left = 63.0
margin_right = 121.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
placeholder_text = "2"

[node name="LineEdit3" type="LineEdit" parent="action_panel/user_input1"]
margin_left = 126.0
margin_right = 160.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
placeholder_text = "3"

[node name="LineEdit4" type="LineEdit" parent="action_panel/user_input1"]
margin_left = 165.0
margin_right = 223.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
placeholder_text = "4"

[node name="LineEdit5" type="LineEdit" parent="action_panel/user_input1"]
margin_left = 228.0
margin_right = 286.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
placeholder_text = "5"

[node name="Question" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 2.0
margin_right = 161.0
margin_bottom = 37.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="q1" type="Label" parent="Question"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Use Listkey magic to open the door. Use the below formula to create Listkey magic. Magic name is \"key\" and use \"int\" datatype(T). "
align = 1
valign = 1
autowrap = true

[node name="q2" type="Label" parent="Question"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Which  magic is used to unlock doors, chest, and even decrypt complex key locks"
align = 1
valign = 1
autowrap = true

[node name="q3" type="Label" parent="Question"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Which  magic is used to unlock doors, chest, and even decrypt complex key locks"
align = 1
valign = 1
autowrap = true

[node name="q4" type="Label" parent="Question"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Which  magic is used to unlock doors, chest, and even decrypt complex key locks"
align = 1
valign = 1
autowrap = true

[node name="q5" type="Label" parent="Question"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Which  magic is used to unlock doors, chest, and even decrypt complex key locks"
align = 1
valign = 1
autowrap = true

[node name="textbox2" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="textbox2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "A BAT appears!"
align = 1
valign = 1
autowrap = true

[node name="ticker" type="Label" parent="textbox2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -15.0
margin_right = -3.0
margin_bottom = -1.0
text = ">"

[node name="textbox" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
text = "A BAT appears!"
valign = 1
autowrap = true

[node name="ticker" type="Label" parent="textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -15.0
margin_right = -3.0
margin_bottom = -1.0
text = ">"

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/shake = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
current = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="player_panel/Stats"]
